# rusty-bridger

./: Cargo.toml  README_RU.md  readme.md
.github/workflows/: release.yml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/lakomoor/rbridger/: FaceTracker.kt  MainActivity.kt  VtsClient.kt
configs/: example_full.json  example_minimal.json  example_webcam.json
ui/: Cargo.toml
ui/src/: main.rs
vts/: Cargo.toml
vts/src/: lib.rs  vtspc.rs  vtsphone.rs
