[package]
name = "rbridger-ui"
version = "0.3.0"
edition = "2021"

[features]
webcam = ["rbridger-lib/webcam"]

[dependencies]
rbridger-lib = { path = "../vts" }
eframe = "0.29"
egui = "0.29"
rfd = "0.15"
log = "0.4.22"
log4rs = "1.3.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
dirs = "5"
evalexpr = "11.3"
ureq = { version = "2", features = ["json"] }
