[package]
name = "rusty-bridge-lib"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
evalexpr = "11.3"
log = "0.4"
log4rs = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tungstenite = "0.24"

# Webcam face tracking
nokhwa = { version = "0.10", features = ["input-native"] }
ort = { version = "2.0.0-rc.12", features = ["download-binaries", "ndarray"] }
ndarray = "0.17"
ureq = "2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
