[package]
name = "rbridger-lib"
version = "0.3.1"
edition = "2021"

[features]
webcam = ["nokhwa", "ort", "ndarray", "ureq", "image"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
evalexpr = "11.3"
log = "0.4"
log4rs = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tungstenite = "0.24"

nokhwa = { version = "0.10", features = ["input-native"], optional = true }
ort   = { version = "2.0.0-rc.12", features = ["download-binaries", "ndarray"], optional = true }
ndarray = { version = "0.17", optional = true }
ureq  = { version = "2", optional = true }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"], optional = true }
